--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,5 @@
 Calorie tracker app. Made by Russell James and Lydia Brynmoor for OSU project.
-Node.js, express, bootstrap, handlebars.
+Node.js, express, bootstrap, handlebars, mysql.
+This is a basic crud app that connects to a mysql database.
+Ability to add data to user table, food table, exercise table, and log tables. 
+Data from tables is displayed.
