--- a/ReadMe
+++ b/ReadMe
@@ -3,3 +3,6 @@ Node.js, express, bootstrap, handlebars, mysql.
 This is a basic crud app that connects to a mysql database.
 Ability to add data to user table, food table, exercise table, and log tables. 
 Data from tables is displayed.
+
+![Alt text](/public/WelcomeScreen.jpg?raw=true "Optional Title")
+
