--- a/ReadMe
+++ b/ReadMe
@@ -6,3 +6,4 @@ Data from tables is displayed.
 
 ![screen1](/public/WelcomeScreen.JPG)
 
+![image](https://user-images.githubusercontent.com/37712230/98039318-ff5fcd80-1dca-11eb-8afa-edc2eb1066e4.png)
