--- a/ReadMe
+++ b/ReadMe
@@ -5,6 +5,6 @@ Ability to add data to user table, food table, exercise table, and log tables.
 Data from tables is displayed.
 
 ![image](public/WelcomeScreen.JPG)
-<img src="public/WelcomeScreen.JPG"/>
+<img src="public/WelcomeScreen.JPG">
 
 ![image](https://user-images.githubusercontent.com/37712230/98039318-ff5fcd80-1dca-11eb-8afa-edc2eb1066e4.png)
